--- a/HTML_Forms/HTML_Form_Inputs.html
+++ b/HTML_Forms/HTML_Form_Inputs.html
@@ -24,7 +24,7 @@
         <br>
         <br>
         <label for="mobile">Mobile: </label>
-        <input type="number" id="mobile">
+        <input type="number" id="mobile" min="1" max="9">
         <br>
         <br>
         <label for="date">Date: </label>
@@ -48,7 +48,7 @@
         <br>
         <br>
         <label for="radio">Radio: </label>
-        <input type="radio" id="radio" value="Radio:">
+        <input type="radio" id="radio" value="radio">
         <br>
         <br>
         <label for="range">Range: </label>
@@ -57,6 +57,30 @@
         <br>
         <label for="website">website: </label>
         <input type="url" id="website">
+        <br>
+        <br>
+        <label for="gender">Gender: </label>
+        <br>
+        <br>
+        <input type="radio" id="male" name="gender" value="Male">
+        <label for="male">Male</label>
+        <br>
+        <input type="radio" id="female" name="gender" value="Female">
+        <label for="female">Female</label>
+        <br>
+        <br>
+        <label for="textarea">TextArea</label>
+        <textarea name="" id="textarea" rows="10" cols="50"></textarea>
+        <br>
+        <br>
+        <label for="country">Country: </label>
+        <select id="country">
+            <option value=""></option>
+            <option value="India">India</option>
+            <option value="USA">USA</option>
+            <option value="UK">UK</option>
+            <option value="Canada">Canada</option>
+        </select>
         <br>
         <br>
         <button>SignUp</button>
