--- a/Assessmeent_4/HTML_Job_Application_Form.html
+++ b/Assessmeent_4/HTML_Job_Application_Form.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Google Job Application Form</h1>
+    <h1>Google</h1>
+    <h2>Job Application Form</h2>
     <h3>Personal Information</h3>
     <form action="">
         <label for="fname">First Name: </label>
@@ -31,6 +32,9 @@
         <br>
         <input type="radio" id="male" name="gender" value="Female">
         <label for="female">Female </label>
+        <br>
+        <input type="radio" id="others" name="gender" value="Others">
+        <label for="others">Others </label>
         <br>
         <h3>Education Details</h3>
         <h4>Degree Details: </h4>
