--- a/Assessmeent_4/HTML_Job_Application_Form.html
+++ b/Assessmeent_4/HTML_Job_Application_Form.html
@@ -107,11 +107,19 @@
         <input type="url" id="website1" placeholder="Enter Your Github URL">
         <br>
         <br>
-        <label for="website2">Linkedln:</label>
+        <label for="website2">Linkedln: </label>
         <input type="url" id="website2" Placeholder="Enter Your Linkedln URL">
         <br>
         <br>
-        <label for="file">Upload Your Resume:</label>
+        <label for="skills">Skills: </label>
+        <input type="text" id="skills" placeholder="Type Your Skills">
+        <br>
+        <br>
+        <label for="rate">Rate Your Skills: </label>
+        <input type="range" id="rate" min="1" max="10" >
+        <br>
+        <br>
+        <label for="file">Upload Your Resume: </label>
         <input type="file" id="file">
         <br>
         <br>
