--- a/CSS_Practice/Assessment_1/Assessment_1.html
+++ b/CSS_Practice/Assessment_1/Assessment_1.html
@@ -97,6 +97,28 @@
             height: 400px;
             background: conic-gradient(red, blue);
         }
+
+        .t1{
+            width: 400px;
+            height: 400px;
+            background-color: red;
+            transition: background-color 10s ease 4s;
+        }
+
+        .t1:hover{
+            background-color: green;
+        }
+
+        .t2{
+            width: 400px;
+            height: 400px;
+            background-color: blue;
+            transition: background-color 2s ease 2s;
+        }
+
+        .t2:hover{
+            background-color: grey;
+        }
     </style>
 </head>
 <body>
@@ -127,5 +149,9 @@
     <div class="conic1"></div>
     <br>
     <div class="conic2"></div>
+    <br>
+    <div class="t1"></div>
+    <br>
+    <div class="t2"></div>
 </body>
 </html>
